# POLL

./: db.sqlite3  pyproject.toml
pollapp/: admin.py  models.py  urls.py  views.py
pollapp/migrations/: 0001_initial.py  0002_auto_20220714_0849.py  0003_auto_20220714_0850.py
pollapp/templates/tes/: add_polls.html  polls_audit_detail.html  results.html
polls/: settings.py  urls.py
