[tool.poetry]
name = "poll"
version = "0.1.0"
description = ""
authors = ["awei"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
yes = "^0.0.1"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "http://pypi.tuna.tsinghua.edu.cn/simple"
default = true 